# pus_queue_protocol

./: .gitignore  readme.md
clients/: CMakeLists.txt  admin_main.c  app_main.c  kiosk_main.c
clients/common/: client_common.c  client_common.h
clients/handlers/: deregister.c  handlers.h  hello.c  notify.c  register.c  status.c  subscribe.c
server/: CMakeLists.txt  ca.crt  ca.key  ca.srl  compile.sh  create_ca.sh  create_cert.sh  main.c  notify.c  notify.h  registry.c  server.crt  server.csr  server.key  types.h
server/message_handlers/: bye.c  common.c  deregister.c  handlers.h  hello.c  notify_ack.c  ping.c  register.c  status.c  subscribe.c
server/queue/: queue.c  queue.h
